# apps/doc-engine/docs/swagger.json
@@ -51,56 +51,6 @@
                         }
                     }
                 }
-            },
-            "post": {
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Injectables"
-                ],
-                "summary": "Create injectable",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Workspace ID",
-                        "name": "X-Workspace-ID",
-                        "in": "header",
-                        "required": true
-                    },
-                    {
-                        "description": "Injectable data",
-                        "name": "request",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/github_com_doc-assembly_doc-engine_internal_adapters_primary_http_dto.CreateInjectableRequest"
-                        }
-                    }
-                ],
-                "responses": {
-                    "201": {
-                        "description": "Created",
-                        "schema": {
-                            "$ref": "#/definitions/github_com_doc-assembly_doc-engine_internal_adapters_primary_http_dto.InjectableResponse"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/github_com_doc-assembly_doc-engine_internal_adapters_primary_http_dto.ErrorResponse"
-                        }
-                    },
-                    "409": {
-                        "description": "Conflict",
-                        "schema": {
-                            "$ref": "#/definitions/github_com_doc-assembly_doc-engine_internal_adapters_primary_http_dto.ErrorResponse"
-                        }
-                    }
-                }
             }
         },
         "/api/v1/content/injectables/{injectableId}": {
@@ -129,94 +79,6 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/github_com_doc-assembly_doc-engine_internal_adapters_primary_http_dto.InjectableResponse"
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found",
-                        "schema": {
-                            "$ref": "#/definitions/github_com_doc-assembly_doc-engine_internal_adapters_primary_http_dto.ErrorResponse"
-                        }
-                    }
-                }
-            },
-            "put": {
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Injectables"
-                ],
-                "summary": "Update injectable",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Injectable ID",
-                        "name": "injectableId",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "description": "Injectable data",
-                        "name": "request",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/github_com_doc-assembly_doc-engine_internal_adapters_primary_http_dto.UpdateInjectableRequest"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/github_com_doc-assembly_doc-engine_internal_adapters_primary_http_dto.InjectableResponse"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/github_com_doc-assembly_doc-engine_internal_adapters_primary_http_dto.ErrorResponse"
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found",
-                        "schema": {
-                            "$ref": "#/definitions/github_com_doc-assembly_doc-engine_internal_adapters_primary_http_dto.ErrorResponse"
-                        }
-                    }
-                }
-            },
-            "delete": {
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Injectables"
-                ],
-                "summary": "Delete injectable",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Injectable ID",
-                        "name": "injectableId",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "204": {
-                        "description": "No Content"
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/github_com_doc-assembly_doc-engine_internal_adapters_primary_http_dto.ErrorResponse"
                         }
                     },
                     "404": {
@@ -3933,45 +3795,6 @@
                 }
             }
         },
-        "github_com_doc-assembly_doc-engine_internal_adapters_primary_http_dto.CreateInjectableRequest": {
-            "type": "object",
-            "required": [
-                "dataType",
-                "key",
-                "label"
-            ],
-            "properties": {
-                "dataType": {
-                    "type": "string",
-                    "enum": [
-                        "TEXT",
-                        "NUMBER",
-                        "DATE",
-                        "CURRENCY",
-                        "BOOLEAN",
-                        "IMAGE",
-                        "TABLE"
-                    ]
-                },
-                "description": {
-                    "type": "string"
-                },
-                "isGlobal": {
-                    "description": "Only allowed for global admins",
-                    "type": "boolean"
-                },
-                "key": {
-                    "type": "string",
-                    "maxLength": 100,
-                    "minLength": 1
-                },
-                "label": {
-                    "type": "string",
-                    "maxLength": 255,
-                    "minLength": 1
-                }
-            }
-        },
         "github_com_doc-assembly_doc-engine_internal_adapters_primary_http_dto.CreateTagRequest": {
             "type": "object",
             "required": [
@@ -4190,6 +4013,13 @@
                     "type": "string"
                 },
                 "label": {
+                    "type": "string"
+                },
+                "metadata": {
+                    "type": "object",
+                    "additionalProperties": {}
+                },
+                "sourceType": {
                     "type": "string"
                 },
                 "updatedAt": {
@@ -5082,22 +4912,6 @@
             ],
             "properties": {
                 "name": {
-                    "type": "string",
-                    "maxLength": 255,
-                    "minLength": 1
-                }
-            }
-        },
-        "github_com_doc-assembly_doc-engine_internal_adapters_primary_http_dto.UpdateInjectableRequest": {
-            "type": "object",
-            "required": [
-                "label"
-            ],
-            "properties": {
-                "description": {
-                    "type": "string"
-                },
-                "label": {
                     "type": "string",
                     "maxLength": 255,
                     "minLength": 1
